--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.keyboard {
+  width: 300px;
+  height: 100px;
+  position: relative;
+  border: 1px solid black;
+}
+
+.key {
+  position: absolute;
+  top: 0px;
+  height: 100%;
+}
+
+.key:not(:last-of-type) {
+  border-right: 1px solid black;
+}
