--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,6 +3,17 @@ body {
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
+  flex-direction: column;
+}
+
+.expand {
+  flex: 1;
+}
+
+.vcenter {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .keyboard {
